# Maiasaura_app

./: .gitignore  CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  PlaylistModel.cpp  PlaylistModel.h  Scanner.cpp  Scanner.h  Track.h  main.cpp
